2.005000 - 2019-04-29

  * implement earendilfr's patches to use check_acl & take into account
    excluded parameter
  * overhaul to use Module::Build
  * refer to MakeRancidConf instead of netdisco-rancid-export

2.004000 - 2014-07-13

  * Added by_hostname config option support

2.003002 - 2014-05-03

  * POD fixups

2.003001 - 2014-02-04

  * Change to use %DEVICE% as well - full url must be configured in location
  * Fix bug in check_acl call

2.002000 - 2014-02-04

  * Support for netdisco-rancid-export config for GROUP name
  * Change to use location and open_in_same_window

2.001000 - 2013-12-08

  * Initial release